TFP-2936 bruk oppgave/rest, fjern ws og rydd kafka (#404)
* TFP-2936 bruk oppgave/rest, fjern ws og rydd kafka

* TFP-2936 mer robust for lokal vtp uten blank database